@@ -2,6 +2,11 @@
 			A very simple session manager
 			by Thomas Leonard
 
+12-Sep-2002
+~~~~~~~~~~~
+Switch to log window display if too many messages are shown.
+Increase history size limit.
+
 11-Sep-2002
 ~~~~~~~~~~~
 Add timestamps to log messages in history window (suggested by krjw).
